--- a/src/view/html/blog.html
+++ b/src/view/html/blog.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Test Title</title>
 	<link rel="stylesheet" href="/css/global.css">
-	<link rel="stylesheet" href="/css/blog.css">
 	<link rel="stylesheet" href="/css/talk.css">
+	<script src="js/jquery-2.1.1.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/blog.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div id="nav">
@@ -15,7 +16,7 @@
 			<li><a href="/blog">技术圈子</a></li>
 			<li><a href="/high">High玩</a></li>
 			<li><a href="/about">关于</a></li>
-		</ul>‘’
+		</ul>
 	</div>
 	<div class="container">
 		<div class="header">
@@ -23,24 +24,25 @@
 		</div>
 		<div class="content">
 			<div class="breadcrumbs">
-				<a title="返回首页" href="http://cuiqingcai.com">
+				<a title="返回首页" href=".">
 					<i class="fa fa-home"></i>
-					</a> <small>&gt;</small><a href="http://cuiqingcai.com/category/technique">技术杂谈</a> <small>&gt;</small> <a href="http://cuiqingcai.com/category/technique/other">Other</a> <small>&gt;</small> 
-					<span class="muted">第一篇博客！</span>
+					</a> <small>&gt;</small><a href="./category/technique">Blog</a> <small>&gt;</small> <a href="./category/technique/other">{{.BlogSortType}}</a> <small>&gt;</small> 
+					<span class="muted">{{.BlogTitle}}</span>
 			</div>
 			<header class="article-header">
-					<h1 class="article-title"><a href="http://cuiqingcai.com/455.html">第一篇博客！</a></h1>
+					<h1 class="article-title"><a href="./blog?id={{.BlogID}}.html#comments">{{.BlogTitle}}</a></h1>
 					<div class="meta">
-						<span id="mute-category" class="muted"><i class="fa fa-list-alt"></i><a href="http://cuiqingcai.com/category/technique/other"> Other</a></span>				<span class="muted"><i class="fa fa-user"></i> <a href="http://cuiqingcai.com/author/cqcre">风</a></span>
-						<time class="muted"><i class="fa fa-clock-o"></i> 4个月前 (12-24)</time>
-						<span class="muted"><i class="fa fa-eye"></i> 6338℃</span>
-						<span class="muted"><i class="fa fa-comments-o"></i> <a href="http://cuiqingcai.com/455.html#comments">7评论</a></span>							</div>
-				</header>
+						<span id="mute-category" class="muted"><i class="fa fa-list-alt"></i><a href="./category/technique/other"> {{.BlogSortType}}</a></span>				<span class="muted"><i class="fa fa-user"></i> <a href="./author/cqcre">{{.Author}}</a></span>
+						<time class="muted"><i class="fa fa-clock-o"></i>{{.BlogTime}}</time>
+						<span class="muted"><i class="fa fa-eye"></i> {{.BlogVisitCount}}</span>
+						<span class="muted"><i class="fa fa-comments-o"></i> <a href="./blog?id={{.BlogID}}.html#comments">{{.BlogCommentCount}}条评论</a></span>	
+					</div>
+			</header>
 			<div class="blog">
-				<iframe scrolling="no" frameborder="0" width="100%" onload="this.height=this.contentWindow.document.documentElement.scrollHeight" src="./blog/1.html"></iframe>
+				<iframe class="blog-frame" name="blog" scrolling="no" frameborder="0" width="100%" onload="this.height=this.contentWindow.document.documentElement.scrollHeight;" src="./article?id={{.BlogID}}"></iframe>
 			</div>
 			<div class="talk">
-				<div id="SOHUCS" sid="455" style="width: 100%; height: auto;">
+				<div id="SOHUCS" sid="{{.BlogID}}" style="width: 100%; height: auto;">
 				 <div id="SOHU_MAIN">
 				  <div id="SOHU-comment-main" class="sohu-comment-wrapper">
 				   <div id="article_info_sohu"> 
@@ -48,7 +50,7 @@
 				     <div class="title-join-w"> 
 				      <div class="join-wrap-w join-wrap-b">
 				       <strong class="wrap-name-w wrap-name-b">评论</strong>
-				       <span class="wrap-join-w wrap-join-b">(<em class="join-strong-gw join-strong-bg">6</em><span node-type="involved">人参与</span><i class="gap-b">，</i><em class="join-strong-gw join-strong-bg">6</em><span node-type="comments">条评论</span>)</span>
+				       <span class="wrap-join-w wrap-join-b">(<em class="join-strong-gw join-strong-bg">{{.BlogCommentPeopleCount}}</em><span node-type="involved">人参与</span><i class="gap-b">，</i><em class="join-strong-gw join-strong-bg">{{.BlogCommentCount}}</em><span node-type="comments">条评论</span>)</span>
 				      </div> 
 				     </div> 
 				     <div class="title-user-w"> 
@@ -69,8 +71,6 @@
 				       <div class="head-img-w"> 
 				        <a node-type="user-avatar" href="javascript:void(0)" target="_self"><img src="http://assets.changyan.sohu.com/upload/asset/scs/images/pic/pic42_null.gif" onerror="SOHUCS.isImgErr(this)" width="42" height="42" alt="" /></a> 
 				       </div> 
-				       <!--
-				              --> 
 				      </div> 
 				      <div class="block-post-w">
 				       <div class="post-default-w post-default-b" style="border: 1px solid rgb(204, 212, 217);">
@@ -92,7 +92,7 @@
 				        <li><strong class="title-name-gw title-name-bg">最新评论</strong></li> 
 				       </ul> 
 				      </div>  
-				      {{.}}
+				      {{.CommentContent}}
 				     </div> 
 				    </div>
 				   </div>
@@ -102,7 +102,6 @@
 				   <div id="powerby_sohu"> 
 				    <div class="reset-g section-service-w"> 
 				     <div class="service-wrap-w service-wrap-b">
-				      <a node-type="powered-by" href="http://changyan.sohu.com?from=changyan" target="_blank">静觅正在使用畅言</a>
 				     </div> 
 				    </div>
 				   </div>
@@ -113,29 +112,25 @@
 		</div>
 		<div class="side">
 			<div class="widget widget_archive"><div class="small_title"><h2>文章归档</h2></div>		
-				<ul>
-					<li><a href="http://cuiqingcai.com/date/2016/03">2016年三月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2016/02">2016年二月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2016/01">2016年一月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/12">2015年十二月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/11">2015年十一月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/10">2015年十月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/09">2015年九月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/08">2015年八月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/07">2015年七月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/06">2015年六月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/05">2015年五月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/04">2015年四月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/03">2015年三月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/02">2015年二月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2015/01">2015年一月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2014/12">2014年十二月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2014/11">2014年十一月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2014/10">2014年十月</a></li>
-					<li><a href="http://cuiqingcai.com/date/2014/09">2014年九月</a></li>
-				</ul>
+			<ul>
+				<li><a href="./date/2016/05">2016年六月</a></li>
+				<li><a href="./date/2016/04">2016年五月</a></li>
+				<li><a href="./date/2016/03">2016年四月</a></li>
+				<li><a href="./date/2016/02">2016年二月</a></li>
+				<li><a href="./date/2016/03">2016年三月</a></li>
+				<li><a href="./date/2016/02">2016年二月</a></li>
+			</ul>
+		</div>
+			<div class="widget d_tag">
+				<div class="small_title">
+					<h2>标签</h2>
+				</div>
+				<div class="d_tags">
+					<a title="" href="./tag/python" data-original-title="2个话题">C++ (2)</a>
+					<a title="" href="./tag/php" data-original-title="1个话题">其它 (1)</a>
+					<a title="" href="./tag/%e7%88%ac%e8%99%ab" data-original-title="4个话题">Java (4)</a>
+				</div>
 			</div>
-			<div class="widget d_tag"><div class="small_title"><h2>标签云</h2></div><div class="d_tags"><a title="" href="http://cuiqingcai.com/tag/python" data-original-title="28个话题">Python (28)</a><a title="" href="http://cuiqingcai.com/tag/php" data-original-title="27个话题">PHP (27)</a><a title="" href="http://cuiqingcai.com/tag/%e7%88%ac%e8%99%ab" data-original-title="24个话题">爬虫 (24)</a><a title="" href="http://cuiqingcai.com/tag/js" data-original-title="18个话题">JS (18)</a><a title="" href="http://cuiqingcai.com/tag/opengl" data-original-title="11个话题">OpenGL (11)</a><a title="" href="http://cuiqingcai.com/tag/html" data-original-title="10个话题">HTML (10)</a><a title="" href="http://cuiqingcai.com/tag/jquery" data-original-title="9个话题">jQuery (9)</a><a title="" href="http://cuiqingcai.com/tag/linux" data-original-title="7个话题">Linux (7)</a><a title="" href="http://cuiqingcai.com/tag/winpcap" data-original-title="7个话题">Winpcap (7)</a><a title="" href="http://cuiqingcai.com/tag/wordpress" data-original-title="6个话题">WordPress (6)</a><a title="" href="http://cuiqingcai.com/tag/security" data-original-title="6个话题">Security (6)</a><a title="" href="http://cuiqingcai.com/tag/git" data-original-title="4个话题">Git (4)</a><a title="" href="http://cuiqingcai.com/tag/net" data-original-title="4个话题">Net (4)</a><a title="" href="http://cuiqingcai.com/tag/java" data-original-title="3个话题">Java (3)</a><a title="" href="http://cuiqingcai.com/tag/mysql" data-original-title="3个话题">Mysql (3)</a><a title="" href="http://cuiqingcai.com/tag/css" data-original-title="3个话题">CSS (3)</a><a title="" href="http://cuiqingcai.com/tag/cocos2d-x" data-original-title="2个话题">Cocos2d-x (2)</a><a title="" href="http://cuiqingcai.com/tag/jsp" data-original-title="2个话题">JSP (2)</a><a title="" href="http://cuiqingcai.com/tag/matlab" data-original-title="2个话题">Matlab (2)</a><a title="" href="http://cuiqingcai.com/tag/bootstrap" data-original-title="2个话题">Bootstrap (2)</a><a title="" href="http://cuiqingcai.com/tag/photoshop" data-original-title="2个话题">Photoshop (2)</a><a title="" href="http://cuiqingcai.com/tag/less" data-original-title="2个话题">LESS (2)</a><a title="" href="http://cuiqingcai.com/tag/json" data-original-title="1个话题">Json (1)</a><a title="" href="http://cuiqingcai.com/tag/redis" data-original-title="1个话题">Redis (1)</a><a title="" href="http://cuiqingcai.com/tag/nginx" data-original-title="1个话题">Nginx (1)</a></div></div>
 		</div>
 	</div>
 </body>
