--- a/src/view/html/blog.html
+++ b/src/view/html/blog.html
@@ -105,7 +105,7 @@
 				       <div class="post-default-w post-default-b" style="border: 1px solid rgb(204, 212, 217);">
 				        <div class="clear-g default-wrap-w">
 				         <input type="text" name="" placeholder="来说两句吧..." class="wrap-text-f " />
-				         <button class="btn-fw btn-bf single-btn-bf">发布</button>
+				         <button class="btn-fw btn-bf single-btn-bf btn-send">发布</button>
 				        </div>
 				       </div>
 				      </div>
