using redis session instead of memory

--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -13,7 +13,7 @@
 		<div id="nav">
 		<div class="nav-center">
 			<ul class="clear">
-				<li><a href="{{.Host.Host}}/blog">技术圈子</a></li>
+				<li class="active"><a href="{{.Host.Host}}/index">博客</a></li>
 				<li><a href="{{.Host.Host}}/high">High玩</a></li>
 				<li><a href="{{.Host.Host}}/about">关于</a></li>
 			</ul>
