--- a/src/view/html/blog.html
+++ b/src/view/html/blog.html
@@ -71,10 +71,10 @@
 				       <strong class="wrap-name-w wrap-name-b">评论</strong>
 				       <span class="wrap-join-w wrap-join-b">(<em class="join-strong-gw join-strong-bg">{{.BlogCommentPeopleCount}}</em><span node-type="involved">人参与</span><i class="gap-b">，</i><em class="join-strong-gw join-strong-bg">{{.BlogCommentCount}}</em><span node-type="comments">条评论</span>)</span>
 				       {{if .User.IsLogin}}
-						<a href="javascript:void(0);" rel="nofollow" class="no-user-name-login user-is-login user-logout wrap-name-logout">登出</a>
+						<a href="javascript:void(0);" rel="nofollow" id="logout" class="no-user-name-login user-is-login user-logout wrap-name-logout">登出</a>
 						<strong class="no-user-name-login user-is-login wrap-name-nick">{{.User.NickName}}</strong>
 					   {{else}}
-					    <a style="display:none;" href="javascript:void(0);" rel="nofollow" class="user-name-login user-logout wrap-name-logout">登出</a>
+					    <a style="display:none;" href="javascript:void(0);" rel="nofollow" id="logout" class="user-name-login user-logout wrap-name-logout">登出</a>
 						<strong style="display:none;" class="user-name-login wrap-name-nick"></strong>
 				       {{end}}
 				      </div>
